--- a/src/pages/PropsAndComponents/PropsAndComponents.css
+++ b/src/pages/PropsAndComponents/PropsAndComponents.css
@@ -13,8 +13,12 @@
   width: 400px;
   height: 400px;
   background: wheat;
-  border: 2px solid orange;
-  border-radius: 10px;
+  border: 5px solid orange;
+  border-radius: 2rem;
   justify-content: center;
   align-items: center;
+}
+
+.inner-container h2 {
+  transform: translateY(-50%);
 }
