--- a/src/pages/CounterApp.css
+++ b/src/pages/CounterApp.css
@@ -1,14 +1,21 @@
-h1 {
-  margin: 0;
-  padding: 3rem;
-}
-
-.container {
+.counter_container {
   width: 100vw;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: lightgoldenrodyellow;
 }
 
-p {
+.inner_counter_container {
+  background: wheat;
+  padding: 4rem;
+  border: 5px solid orange;
+  border-radius: 2rem;
+}
+
+.inner_counter_container p {
   font-size: 4rem;
   font-weight: 100;
   margin-bottom: 5rem;
@@ -26,13 +33,12 @@ span {
   color: red;
 }
 
-button {
+.inner_counter_container button {
   width: 100px;
   height: 100px;
   font-size: 3rem;
   padding: 1rem;
   border-radius: 50%;
-  border: 1px solid transparent;
   margin-left: 15px;
 }
 
