--- a/src/pages/FetchAPI.css
+++ b/src/pages/FetchAPI.css
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   gap: 5rem;
-  background: lightgray;
+  background: lightgoldenrodyellow;
 }
 
 .fetch_inner_container {
